--- a/about.html
+++ b/about.html
@@ -105,18 +105,24 @@ body {
 <div class="main">
     <center><h2>What is Project 30?</h2></center>
 	<p><b><center>Project 30 is inspired by the former band 30 Minutes, formed by the 3 members of The Lemonade Rhapsody: Bathan, Gian, and Enad. We are looking for more members as our band members are not official yet.</p></b></center>
-	
   <p>‎ </p>  
   <p>‎ </p>
   <p>‎ </p>
-  <p>‎ </p>
-  <p>‎ </p>
-  <p>‎ </p>
-  <p>‎ </p>
-  <p>‎ </p>
-  <p>‎ </p>
-  <p>‎ </p>
-  <p>‎ </p>
+
+  
+  <center><h2>Our Goals for Project 30</h2></center>
+  <center><p><b>Earn the respect of the school</p></b></center>
+  <center><p><b>Enjoy and perform to the fullest</p></b></center>
+  <center><p><b>Be remembered as a good band to other future Bosconians</p></b></center>
+  <center><p><b>To perform gigs despite being our last year</p></b></center>
+  <center><p><b>Give the audience the hype and so for ourselves</p></b></center>
+  <center><p><b>Inspire other bosconians to create their own band</p></b></center>
+  <center><p><b>No matter how hard, We strive to be better</p></b></center>
+  <center><p><b>To Improve and learn from the mistakes from our performance</p></b></center>
+  <center><p><b>Create the best of the best memories</p></b></center>
+  <center><p><b>Understand and respect on one another</p></b></center>
+
+
 </div>
 </div>
 <div class="footer">
