--- a/about.html
+++ b/about.html
@@ -116,7 +116,7 @@ body {
   <center><p><b>Be remembered as a good band to other future Bosconians</p></b></center>
   <center><p><b>To perform gigs despite being our last year</p></b></center>
   <center><p><b>Give the audience the hype and so for ourselves</p></b></center>
-  <center><p><b>Inspire other bosconians to create their own band</p></b></center>
+  <center><p><b>Inspire other Bosconians to create their own band</p></b></center>
   <center><p><b>No matter how hard, We strive to be better</p></b></center>
   <center><p><b>To Improve and learn from the mistakes from our performance</p></b></center>
   <center><p><b>Create the best of the best memories</p></b></center>
