--- a/timeline.html
+++ b/timeline.html
@@ -104,7 +104,7 @@ body {
 <div class="row">
   <div class="side">
     <h2><center>PROJECT 30 TIMELINE<center></h2>
-    <center><p><b>Current Timeline of Project 30 starting from the latest</b></p></center>
+    <center><p><b>Current Timeline of Project 30 starting from the latest.</b></p></center>
 
     <p>‎ </p>
     <p>‎ </p>
