--- a/timeline.html
+++ b/timeline.html
@@ -121,7 +121,7 @@ body {
 
 <div class="main">
   <center><h2>SED 2024</h2></center>
-	<center><p><b>Salesian Educators' Day (SED) is the celebration to our Salesian Educators' and this was our gratitude performance to our Salesian Educators'. Though we still performed under our previous band name The Lemonade Rhapsody, this was the start of Project 30</p></b></center>
+	<center><p><b>Salesian Educators' Day (SED) is the celebration of our Salesian Educators' and this was our gratitude performance to our Salesian Educators'. Though we still performed under The Lemonade Rhapsody, this was the start of Project 30</p></b></center>
   <center><p><b>Song performed: Memories</p></b></center>
   <center><p><b>Performed during: SED2024 Oct. 3, 2024</p></b></center>
 	
