--- a/index.html
+++ b/index.html
@@ -105,11 +105,19 @@ body {
 <div class="main">
     <center><h2>The Official Webpage of Project 30</h2></center>
 	<p><b><center>All latest timelines, scheduled performances, and official band announcements will be posted here</p></b></center>
+
+	
   <p>‎ </p>
   <p>‎ </p>
   <p>‎ </p>
-  <center><h2>Announcements</h2></center>
-	<p><b><center>So far, no announcements have been made yet.</p></b></center>
+
+	
+  <center><h1>Announcements</h1></center>
+	
+	<p>‎ </p>
+	
+  <center><h1>So far no announcements have been made</h1></center>
+	
   <p>‎ </p>
   <p>‎ </p>
   <p>‎ </p>
