--- a/timeline.html
+++ b/timeline.html
@@ -92,7 +92,7 @@ body {
 </div>
 
 <div class="navbar">
-  <a href="https://ivangamer455.github.io/LMRHAP_WEB/" target="_blank">THE LEMONADE RHAPSODY ARCHIVE</a>
+  <a href="https://ivangamer455.github.io/LMRHAP_WEB/" target="_blank">THE LEMONADE RHAPSODY</a>
   <a href="timeline.html">TIMELINE</a>
   <a href="schedules.html">SCHEDULES</a>
   <a href="members.html">BAND MEMBERS</a>
