--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
   box-sizing: border-box;
 }
 
+
 body {
   font-family: Arial;
   margin: 0;
@@ -59,7 +60,7 @@ body {
 }
 
 .img {
-   width: 100%
+   width: 100%;
    border-radius: 50%; 
 }
 
@@ -83,6 +84,8 @@ body {
   }
 }
 </style>
+
+
 </head>
 <body>
 
@@ -105,26 +108,27 @@ body {
 <div class="main">
     <center><h2>What is Project 30?</h2></center>
 	<p><b><center>Project 30 is inspired by the former band 30 Minutes, formed by the 3 members of The Lemonade Rhapsody: Bathan, Gian, and Enad. We are looking for more members as our band members are not official yet.</p></b></center>
-  <p>‎ </p>  
-  <p>‎ </p>
-  <p>‎ </p>
+  <br>
+  <br>
+  <br>
+  <br>
 
   
-  <center><h2>Our Goals for Project 30</h2></center>
-  <center><p><b>Earn the respect of the school</p></b></center>
-  <center><p><b>Enjoy and perform to the fullest</p></b></center>
-  <center><p><b>Be remembered as a good band to other future Bosconians</p></b></center>
-  <center><p><b>To perform gigs despite being our last year</p></b></center>
-  <center><p><b>Give the audience the hype and so for ourselves</p></b></center>
-  <center><p><b>Inspire other Bosconians to create their own band</p></b></center>
-  <center><p><b>No matter how hard, We strive to be better</p></b></center>
-  <center><p><b>To Improve and learn from the mistakes from our performance</p></b></center>
-  <center><p><b>Create the best of the best memories</p></b></center>
-  <center><p><b>Understand and respect on one another</p></b></center>
+  <center><ul style="font-size: 30px;"><b>Our Goals for Project 30</ul></center></b></center>
+  <center><li style="font-size: 20px;">Earn the respect of the school</li></center>
+  <center><li style="font-size: 20px;">Enjoy and perform to the fullest</li></center>
+  <center><li style="font-size: 20px;">Be remembered as a good band to other future Bosconians</li></center>
+  <center><li style="font-size: 20px;">To perform gigs despite being our last year</li></center>
+  <center><li style="font-size: 20px;">Give the audience the hype and so for ourselves</li></center>
+  <center><li style="font-size: 20px;">Inspire other Bosconians to create their own band</li></center>
+  <center><li style="font-size: 20px;">No matter how hard, We strive to be better</li></center>
+  <center><li style="font-size: 20px;">To Improve and learn from the mistakes from our performance</li></center>
+  <center><li style="font-size: 20px;">Create the best of the best memories</li></center>
+  <center><li style="font-size: 20px;">Understand and respect on one another</li></center>
 
 
 </div>
-</div>
+
 <div class="footer">
   <center><h2>This webpage project of mine is open source so you can have one for your band too</a></h2></center>
 </div>
