--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ body {
 }
 
 .img {
-   width: 100%
+   width: 100%;
    border-radius: 50%; 
 }
 
@@ -107,25 +107,28 @@ body {
 	<p><b><center>All latest timelines, scheduled performances, and official band announcements will be posted here</p></b></center>
 
 	
-  <p>‎ </p>
-  <p>‎ </p>
-  <p>‎ </p>
+  <br>
+  <br>
+  <br>
+  <br>
 
 	
   <center><h1>Announcements</h1></center>
 	
-	<p>‎ </p>
+	<br>
+  <br>
 	
   <center><h2>So far no announcements have been made</h2></center>
 	
-  <p>‎ </p>
-  <p>‎ </p>
-  <p>‎ </p>
-  <p>‎ </p>
-  <p>‎ </p>
-  <p>‎ </p>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
   
-  </div>
+
 </div>
 
 <div class="footer">
