--- a/schedules.html
+++ b/schedules.html
@@ -60,7 +60,7 @@ body {
 }
 
 .img {
-   width: 100%
+   width: 100%;
    border-radius: 50%; 
 }
 
@@ -102,23 +102,24 @@ body {
   <a href="index.html">HOME</a>
 </div>
   
-  <div class="main">
+<div class="main">
   <center><h2>Coming Soon</h2></center>
   
-  <p>‎ </p>
-  <p>‎ </p>
-  <p>‎ </p>
-  <p>‎ </p>
-  <p>‎ </p>
-  <p>‎ </p>
-  <p>‎ </p>
-  <p>‎ </p>
-  <p>‎ </p>
-  <p>‎ </p>
-  <p>‎ </p>
-  <p>‎ </p>
-  </div>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
 </div>
+
 <div class="footer">
   <center><h2>This webpage project of mine is open source so you can have one for your band too</a></h2></center>
 </div>
