--- a/socials.html
+++ b/socials.html
@@ -60,7 +60,7 @@ body {
 }
 
 .img {
-   width: 100%
+   width: 100%;
    border-radius: 50%; 
 }
 
@@ -102,19 +102,22 @@ body {
   <a href="index.html">HOME</a>
 </div>
   
-  <div class="main">
+<div class="main">
   <center><h2>FB Page Coming Soon</h2></center>
   <div class="img"><center><a href="socials.html"><img src="pics/facebook.png" class=main width 250 height=150></a></center></div>
   
-  <p>‎ </p>
-  <p>‎ </p>
-  <p>‎ </p>
-  <p>‎ </p>
-  <p>‎ </p>
-  <p>‎ </p>
-  <p>‎ </p>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+
   </div>
 </div>
+
 <div class="footer">
   <center><h2>This webpage project of mine is open source so you can have one for your band too</a></h2></center>
 </div>
