--- a/timeline.html
+++ b/timeline.html
@@ -59,7 +59,7 @@ body {
 }
 
 .img {
-   width: 100%
+   width: 100%;
    border-radius: 50%; 
 }
 
@@ -106,26 +106,27 @@ body {
     <h2><center>PROJECT 30 TIMELINE<center></h2>
     <center><p><b>Current Timeline of Project 30 starting from the latest.</b></p></center>
 
-    <p>‎ </p>
-    <p>‎ </p>
-    <p>‎ </p>
-    <p>‎ </p>
-    <p>‎ </p>
-    <p>‎ </p>
-    <p>‎ </p>
-    <p>‎ </p>
-    <p>‎ </p>
-    <p>‎ </p>
-    <p>‎ </p>
-</div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+  </div>
 
-<div class="main">
+  <div class="main">
   <center><h2>SED 2024</h2></center>
 	<center><p><b>Salesian Educators' Day (SED) is the celebration of our Salesian Educators' and this was our gratitude performance to our Salesian Educators'. Though we still performed under The Lemonade Rhapsody, this was the start of Project 30</p></b></center>
   <center><p><b>Song performed: Memories</p></b></center>
   <center><p><b>Performed during: SED2024 Oct. 3, 2024</p></b></center>
 	
-</div>
+  </div>
 </div>
 <div class="footer">
   <center><h2>This webpage project of mine is open source so you can have one for your band too</a></h2></center>
